--- a/profile-my-favorite.html
+++ b/profile-my-favorite.html
@@ -370,7 +370,7 @@
     </header>
     <main class="main-content">
       <div class="container profile-container">
-        <div class="person-info">
+        <div class="person-info mobile-hide">
           <div class="mobile-show">
             <h1 class="text-center">Profile</h1>
           </div>
@@ -415,97 +415,308 @@
           </ul>
         </div>
         <div class="wrap-objects-item">
-          <h1 class="text-left mobile-hide">Profile</h1>
-          <ul class="nav-tabs tabs-settings-profile">
-            <li><a class="nav-item active" href="#personal-data-profile">Personal data</a></li>
-            <li><a class="nav-item" href="#settings-profile">Settings</a></li>
-          </ul>
-          <div class="tab-content">
-            <div class="active" id="personal-data-profile">
-              <form class="settings-profile">
+          <div class="d-flex align-items-center">
+            <h1 class="mb-0 mr-5">My offers</h1><a class="btn book only-icon mt-0" href="#"></a>
+          </div>
+          <div class="objects-item mt-5"><a class="object-item" href="#">
+              <div class="image-numbers">
+                <div class="image" style="background-image: url(img/object-item/1.jpg)">
+                  <div class="overlay"></div>
+                  <button class="like"></button>
+                  <div class="badges published">Published</div>
+                </div>
+                <div class="numbers">
+                  <div class="dropdown item edit">
+                    <button class="dropdown-toggle" type="button"></button>
+                    <div class="dropdown-menu">
+                      <button class="items-line" type="button">Скрить</button>
+                      <button class="items-line" type="button">Обновить</button>
+                      <button class="items-line" type="button">Удалить</button>
+                    </div>
+                  </div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
+                </div>
+              </div>
+              <div class="footer">
                 <div class="inner">
-                  <div>
-                    <h6>Enter your gender</h6>
-                    <div class="d-flex">
-                      <div class="radiobox mr-3 checked-item">
-                        <input type="radio" name="male-f" checked id="male-f-1">
-                        <label for="male-f-1">Male</label>
-                      </div>
-                      <div class="radiobox checked-item">
-                        <input type="radio" name="male-f" id="male-f-2">
-                        <label for="male-f-2">Female</label>
-                      </div>
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
+                  <div class="d-flex justify-content-between flex-wrap">
+                    <div class="price">€ 4 000
+                      <div class="month">/ month</div>
                     </div>
-                    <h6>Who do you represent?</h6>
-                    <div class="d-flex">
-                      <div class="radiobox mr-3 checked-item">
-                        <input type="radio" name="agent-owner" checked id="agent-owner-1">
-                        <label for="agent-owner-1">Agent</label>
-                      </div>
-                      <div class="radiobox checked-item">
-                        <input type="radio" name="agent-owner" id="agent-owner-2">
-                        <label for="agent-owner-2">Owner</label>
-                      </div>
-                    </div>
-                    <h6>What is your name?</h6>
-                    <input type="text" placeholder="Name">
-                    <input type="text" placeholder="Second name">
-                  </div>
-                  <div>
-                    <h6>Where do you live?</h6>
-                    <input type="text" placeholder="Country">
-                    <input type="text" placeholder="City">
-                    <h6>Contacts</h6>
-                    <div class="input-info">
-                      <input type="text" placeholder="Phone number" style="background-image: url(img/icons/phone-call-filled.svg)">
-                      <button class="info-btn" type="button"></button>
-                      <div class="info-text">Orci varius natoque penatibus et magnis dis parturient mont, nascetur ridiculus mus nat penatibus varius.</div>
-                    </div>
-                    <div class="input-info">
-                      <input type="text" placeholder="WhatsApp" style="background-image: url(img/icons/whats-app.svg)">
-                      <button class="info-btn" type="button"></button>
-                      <div class="info-text">Nascetur ridiculus mus nat penatibus varius.</div>
-                    </div>
-                    <div class="input-info">
-                      <input type="text" placeholder="Telegram" style="background-image: url(img/icons/telega.svg)">
-                      <button class="info-btn" type="button"></button>
-                      <div class="info-text">Dis parturient mont, nascetur ridiculus mus nat</div>
+                    <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
                     </div>
                   </div>
                 </div>
-                <div class="footer">
-                  <button class="btn">Save changes</button>
-                  <div class="saved">Saved successfully</div>
+              </div></a><a class="object-item" href="#">
+              <div class="image-numbers">
+                <div class="image" style="background-image: url(img/object-item/2.jpg)">
+                  <div class="overlay"></div>
+                  <button class="like"></button>
+                  <div class="badges checking">Checking</div>
                 </div>
-              </form>
-            </div>
-            <div id="settings-profile">
-              <form class="settings-profile">
+                <div class="numbers">
+                  <div class="dropdown item edit">
+                    <button class="dropdown-toggle" type="button"></button>
+                    <div class="dropdown-menu">
+                      <button class="items-line" type="button">Скрить</button>
+                      <button class="items-line" type="button">Обновить</button>
+                      <button class="items-line" type="button">Удалить</button>
+                    </div>
+                  </div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
+                </div>
+              </div>
+              <div class="footer">
                 <div class="inner">
-                  <div>
-                    <h6>Password</h6>
-                    <div class="toggle-password">
-                      <div class="eye"></div>
-                      <input type="password" placeholder="Password">
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
+                  <div class="d-flex justify-content-between flex-wrap">
+                    <div class="price">€ 4 000
+                      <div class="month">/ month</div>
                     </div>
-                    <div class="toggle-password">
-                      <div class="eye"></div>
-                      <input type="password" placeholder="New password">
-                    </div>
-                    <div>
-                      <button class="btn mt-0">Save</button>
-                    </div>
-                  </div>
-                  <div>
-                    <h6>Email</h6>
-                    <input type="email" placeholder="name@gmail.com">
-                    <div>
-                      <button class="btn mt-0">Save</button>
+                    <div class="tags">
+                      <div class="tag">Place du</div>
                     </div>
                   </div>
                 </div>
-              </form>
-            </div>
+              </div></a><a class="object-item" href="#">
+              <div class="image-numbers">
+                <div class="image" style="background-image: url(img/object-item/3.jpg)">
+                  <div class="overlay"></div>
+                  <button class="like"></button>
+                  <div class="badges rejected">Rejected</div>
+                </div>
+                <div class="numbers">
+                  <div class="dropdown item edit">
+                    <button class="dropdown-toggle" type="button"></button>
+                    <div class="dropdown-menu">
+                      <button class="items-line" type="button">Скрить</button>
+                      <button class="items-line" type="button">Обновить</button>
+                      <button class="items-line" type="button">Удалить</button>
+                    </div>
+                  </div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
+                </div>
+              </div>
+              <div class="footer">
+                <div class="inner">
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
+                  <div class="d-flex justify-content-between flex-wrap">
+                    <div class="price">€ 4 000
+                      <div class="month">/ month</div>
+                    </div>
+                    <div class="tags">
+                      <div class="tag">Place du</div>
+                    </div>
+                  </div>
+                </div>
+              </div></a><a class="object-item" href="#">
+              <div class="image-numbers">
+                <div class="image" style="background-image: url(img/object-item/5.jpg)">
+                  <div class="overlay"></div>
+                  <button class="like"></button>
+                  <div class="badges date"><span class="light">Unpublished:</span><span>25 May 2020</span></div>
+                </div>
+                <div class="numbers">
+                  <div class="dropdown item edit">
+                    <button class="dropdown-toggle" type="button"></button>
+                    <div class="dropdown-menu">
+                      <button class="items-line" type="button">Скрить</button>
+                      <button class="items-line" type="button">Обновить</button>
+                      <button class="items-line" type="button">Удалить</button>
+                    </div>
+                  </div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
+                </div>
+              </div>
+              <div class="footer">
+                <div class="inner">
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
+                  <div class="d-flex justify-content-between flex-wrap">
+                    <div class="price">€ 4 000
+                      <div class="month">/ month</div>
+                    </div>
+                    <div class="tags">
+                      <div class="tag">Place du</div>
+                    </div>
+                  </div>
+                </div>
+              </div></a><a class="object-item" href="#">
+              <div class="image-numbers">
+                <div class="image" style="background-image: url(img/object-item/6.jpg)">
+                  <div class="overlay"></div>
+                  <button class="like"></button>
+                </div>
+                <div class="numbers">
+                  <div class="dropdown item edit">
+                    <button class="dropdown-toggle" type="button"></button>
+                    <div class="dropdown-menu">
+                      <button class="items-line" type="button">Скрить</button>
+                      <button class="items-line" type="button">Обновить</button>
+                      <button class="items-line" type="button">Удалить</button>
+                    </div>
+                  </div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
+                </div>
+              </div>
+              <div class="footer">
+                <div class="inner">
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
+                  <div class="d-flex justify-content-between flex-wrap">
+                    <div class="price">€ 4 000
+                      <div class="month">/ month</div>
+                    </div>
+                    <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
+                    </div>
+                  </div>
+                </div>
+              </div></a><a class="object-item" href="#">
+              <div class="image-numbers">
+                <div class="image" style="background-image: url(img/object-item/1.jpg)">
+                  <div class="overlay"></div>
+                  <button class="like"></button>
+                </div>
+                <div class="numbers">
+                  <div class="dropdown item edit">
+                    <button class="dropdown-toggle" type="button"></button>
+                    <div class="dropdown-menu">
+                      <button class="items-line" type="button">Скрить</button>
+                      <button class="items-line" type="button">Обновить</button>
+                      <button class="items-line" type="button">Удалить</button>
+                    </div>
+                  </div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
+                </div>
+              </div>
+              <div class="footer">
+                <div class="inner">
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
+                  <div class="d-flex justify-content-between flex-wrap">
+                    <div class="price">€ 4 000
+                      <div class="month">/ month</div>
+                    </div>
+                    <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
+                    </div>
+                  </div>
+                </div>
+              </div></a><a class="object-item" href="#">
+              <div class="image-numbers">
+                <div class="image" style="background-image: url(img/object-item/4.jpg)">
+                  <div class="overlay"></div>
+                  <button class="like"></button>
+                </div>
+                <div class="numbers">
+                  <div class="dropdown item edit">
+                    <button class="dropdown-toggle" type="button"></button>
+                    <div class="dropdown-menu">
+                      <button class="items-line" type="button">Скрить</button>
+                      <button class="items-line" type="button">Обновить</button>
+                      <button class="items-line" type="button">Удалить</button>
+                    </div>
+                  </div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
+                </div>
+              </div>
+              <div class="footer">
+                <div class="inner">
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
+                  <div class="d-flex justify-content-between flex-wrap">
+                    <div class="price">€ 4 000
+                      <div class="month">/ month</div>
+                    </div>
+                    <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
+                    </div>
+                  </div>
+                </div>
+              </div></a><a class="object-item" href="#">
+              <div class="image-numbers">
+                <div class="image" style="background-image: url(img/object-item/6.jpg)">
+                  <div class="overlay"></div>
+                  <button class="like"></button>
+                </div>
+                <div class="numbers">
+                  <div class="dropdown item edit">
+                    <button class="dropdown-toggle" type="button"></button>
+                    <div class="dropdown-menu">
+                      <button class="items-line" type="button">Скрить</button>
+                      <button class="items-line" type="button">Обновить</button>
+                      <button class="items-line" type="button">Удалить</button>
+                    </div>
+                  </div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
+                </div>
+              </div>
+              <div class="footer">
+                <div class="inner">
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
+                  <div class="d-flex justify-content-between flex-wrap">
+                    <div class="price">€ 4 000
+                      <div class="month">/ month</div>
+                    </div>
+                    <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
+                    </div>
+                  </div>
+                </div>
+              </div></a><a class="object-item" href="#">
+              <div class="image-numbers">
+                <div class="image" style="background-image: url(img/object-item/5.jpg)">
+                  <div class="overlay"></div>
+                  <button class="like"></button>
+                </div>
+                <div class="numbers">
+                  <div class="dropdown item edit">
+                    <button class="dropdown-toggle" type="button"></button>
+                    <div class="dropdown-menu">
+                      <button class="items-line" type="button">Скрить</button>
+                      <button class="items-line" type="button">Обновить</button>
+                      <button class="items-line" type="button">Удалить</button>
+                    </div>
+                  </div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
+                </div>
+              </div>
+              <div class="footer">
+                <div class="inner">
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
+                  <div class="d-flex justify-content-between flex-wrap">
+                    <div class="price">€ 4 000
+                      <div class="month">/ month</div>
+                    </div>
+                    <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
+                    </div>
+                  </div>
+                </div>
+              </div></a>
           </div>
         </div>
       </div>
