--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <div>
             <div class="d-flex align-items-center"><a class="popup mobile-menu mr-3" href="#mobile-menu"></a>
-              <div class="wrap-logo"><a class="logo"><img src="img/logo.svg" alt="logo"/></a></div>
+              <div class="wrap-logo"><a class="logo" href="/"><img src="img/logo.svg" alt="logo"/></a></div>
               <div><a class="btn book" herf="#">Place an offer</a></div>
             </div>
           </div>
@@ -608,7 +608,6 @@
                 <div class="image" style="background-image: url(img/object-item/1.jpg)">
                   <div class="overlay"></div>
                   <button class="like"></button>
-                  <div class="badges Pars">Place du</div>
                 </div>
                 <div class="numbers">
                   <div class="item door">4</div>
@@ -624,6 +623,8 @@
                       <div class="month">/ month</div>
                     </div>
                     <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
                     </div>
                   </div>
                 </div>
@@ -634,20 +635,21 @@
                 <div class="image" style="background-image: url(img/object-item/2.jpg)">
                   <div class="overlay"></div>
                   <button class="like"></button>
-                  <div class="badges Telet">Place du Châtelet 3</div>
                 </div>
                 <div class="numbers">
-                  <div class="item door">6</div>
-                  <div class="item bed">3</div>
-                  <div class="item size">42</div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
                 </div>
               </div>
               <div class="footer">
                 <div class="inner">
-                  <h6>GT for sale &quot;Calypso&quot;</h6>
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
                   <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 4 000 000</div>
+                    <div class="price">€ 400 000</div>
                     <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
                     </div>
                   </div>
                 </div>
@@ -658,22 +660,23 @@
                 <div class="image" style="background-image: url(img/object-item/3.jpg)">
                   <div class="overlay"></div>
                   <button class="like"></button>
-                  <div class="badges Care">Place du Telet</div>
                 </div>
                 <div class="numbers">
-                  <div class="item door">2</div>
-                  <div class="item bed">5</div>
-                  <div class="item size">67</div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
                 </div>
               </div>
               <div class="footer">
                 <div class="inner">
-                  <h6>For sale &quot;Calypso&quot;</h6>
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
                   <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 6 000
+                    <div class="price">€ 4 000
                       <div class="month">/ month</div>
                     </div>
                     <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
                     </div>
                   </div>
                 </div>
@@ -684,20 +687,23 @@
                 <div class="image" style="background-image: url(img/object-item/4.jpg)">
                   <div class="overlay"></div>
                   <button class="like"></button>
-                  <div class="badges Pars">Du Châtelet</div>
                 </div>
                 <div class="numbers">
                   <div class="item door">4</div>
-                  <div class="item bed">6</div>
-                  <div class="item size">34</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
                 </div>
               </div>
               <div class="footer">
                 <div class="inner">
-                  <h6>Apartment for sale &quot;Calypso&quot;</h6>
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
                   <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 4 000</div>
+                    <div class="price">€ 4 000
+                      <div class="month">/ month</div>
+                    </div>
                     <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
                     </div>
                   </div>
                 </div>
@@ -708,22 +714,23 @@
                 <div class="image" style="background-image: url(img/object-item/5.jpg)">
                   <div class="overlay"></div>
                   <button class="like"></button>
-                  <div class="badges Telet">Châtelet</div>
                 </div>
                 <div class="numbers">
-                  <div class="item door">5</div>
-                  <div class="item bed">30</div>
-                  <div class="item size">62</div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
                 </div>
               </div>
               <div class="footer">
                 <div class="inner">
-                  <h6>Apartment &quot;Calypso&quot;</h6>
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
                   <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 60 000
+                    <div class="price">€ 4 000
                       <div class="month">/ month</div>
                     </div>
                     <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
                     </div>
                   </div>
                 </div>
@@ -731,25 +738,26 @@
           </div>
           <div><a class="object-item" href="#">
               <div class="image-numbers">
-                <div class="image" style="background-image: url(img/object-item/6.jpg)">
+                <div class="image" style="background-image: url(img/object-item/5.jpg)">
                   <div class="overlay"></div>
                   <button class="like"></button>
-                  <div class="badges Pars">Place du Châtelet2</div>
                 </div>
                 <div class="numbers">
                   <div class="item door">4</div>
-                  <div class="item bed">3</div>
-                  <div class="item size">33</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
                 </div>
               </div>
               <div class="footer">
                 <div class="inner">
-                  <h6>Apartment</h6>
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
                   <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 24 000
+                    <div class="price">€ 4 000
                       <div class="month">/ month</div>
                     </div>
                     <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
                     </div>
                   </div>
                 </div>
@@ -760,20 +768,23 @@
                 <div class="image" style="background-image: url(img/object-item/1.jpg)">
                   <div class="overlay"></div>
                   <button class="like"></button>
-                  <div class="badges Pars">Place du Châtelet</div>
                 </div>
                 <div class="numbers">
-                  <div class="item door">6</div>
-                  <div class="item bed">12</div>
-                  <div class="item size">22</div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
                 </div>
               </div>
               <div class="footer">
                 <div class="inner">
-                  <h6>Apartment for sale &quot;Calypso&quot;</h6>
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
                   <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 320 000</div>
+                    <div class="price">€ 4 000
+                      <div class="month">/ month</div>
+                    </div>
                     <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
                     </div>
                   </div>
                 </div>
@@ -784,22 +795,23 @@
                 <div class="image" style="background-image: url(img/object-item/2.jpg)">
                   <div class="overlay"></div>
                   <button class="like"></button>
-                  <div class="badges Pars">Place du Châtelet</div>
                 </div>
                 <div class="numbers">
                   <div class="item door">4</div>
-                  <div class="item bed">3</div>
-                  <div class="item size">35</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
                 </div>
               </div>
               <div class="footer">
                 <div class="inner">
-                  <h6>Apartment for rent</h6>
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
                   <div class="d-flex justify-content-between flex-wrap">
                     <div class="price">€ 4 000
                       <div class="month">/ month</div>
                     </div>
                     <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
                     </div>
                   </div>
                 </div>
@@ -807,25 +819,26 @@
           </div>
           <div><a class="object-item" href="#">
               <div class="image-numbers">
-                <div class="image" style="background-image: url(img/object-item/3.jpg)">
+                <div class="image" style="background-image: url(img/object-item/5.jpg)">
                   <div class="overlay"></div>
                   <button class="like"></button>
-                  <div class="badges Place du Châtelet">Pars</div>
                 </div>
                 <div class="numbers">
-                  <div class="item door">7</div>
-                  <div class="item bed">14</div>
-                  <div class="item size">75</div>
+                  <div class="item door">4</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
                 </div>
               </div>
               <div class="footer">
                 <div class="inner">
-                  <h6>For sale &quot;Calypso&quot;</h6>
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
                   <div class="d-flex justify-content-between flex-wrap">
                     <div class="price">€ 4 000
                       <div class="month">/ month</div>
                     </div>
                     <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
                     </div>
                   </div>
                 </div>
@@ -836,22 +849,23 @@
                 <div class="image" style="background-image: url(img/object-item/4.jpg)">
                   <div class="overlay"></div>
                   <button class="like"></button>
-                  <div class="badges Nhâtelet"></div>
                 </div>
                 <div class="numbers">
                   <div class="item door">4</div>
-                  <div class="item bed">14</div>
-                  <div class="item size">32</div>
+                  <div class="item bed">2</div>
+                  <div class="item size">52</div>
                 </div>
               </div>
               <div class="footer">
                 <div class="inner">
-                  <h6>Sale &quot;Calypso&quot;</h6>
+                  <h6>Apa sale &quot;Calypso&quot;</h6>
                   <div class="d-flex justify-content-between flex-wrap">
                     <div class="price">€ 4 000
                       <div class="month">/ month</div>
                     </div>
                     <div class="tags">
+                      <div class="tag">Pars</div>
+                      <div class="tag">Place du</div>
                     </div>
                   </div>
                 </div>
