--- a/profile.html
+++ b/profile.html
@@ -302,7 +302,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <div>
             <div class="d-flex align-items-center"><a class="popup mobile-menu mr-3" href="#mobile-menu"></a>
-              <div class="wrap-logo"><a class="logo"><img src="img/logo.svg" alt="logo"/></a></div>
+              <div class="wrap-logo"><a class="logo" href="/"><img src="img/logo.svg" alt="logo"/></a></div>
               <div><a class="btn book" herf="#">Place an offer</a></div>
             </div>
           </div>
@@ -318,7 +318,7 @@
             </nav>
             <div class="dropdown user-dropdown">
               <button class="dropdown-toggle" type="button">
-                <div class="person" style="background-image: url(img/person.jpg)"></div>
+                <div class="person" style="background-image: url(../img/person.jpg)"></div>
               </button>
               <ul class="dropdown-menu">
                 <li><a class="link-icon" href="#">
