profile-add-offer

--- a/profile.html
+++ b/profile.html
@@ -456,17 +456,17 @@
                     <input type="text" placeholder="Country">
                     <input type="text" placeholder="City">
                     <h6>Contacts</h6>
-                    <div class="input-info">
+                    <div class="tooltip input-info">
                       <input type="text" placeholder="Phone number" style="background-image: url(img/icons/phone-call-filled.svg)">
                       <button class="info-btn" type="button"></button>
                       <div class="info-text">Orci varius natoque penatibus et magnis dis parturient mont, nascetur ridiculus mus nat penatibus varius.</div>
                     </div>
-                    <div class="input-info">
+                    <div class="tooltip input-info">
                       <input type="text" placeholder="WhatsApp" style="background-image: url(img/icons/whats-app.svg)">
                       <button class="info-btn" type="button"></button>
                       <div class="info-text">Nascetur ridiculus mus nat penatibus varius.</div>
                     </div>
-                    <div class="input-info">
+                    <div class="tooltip input-info">
                       <input type="text" placeholder="Telegram" style="background-image: url(img/icons/telega.svg)">
                       <button class="info-btn" type="button"></button>
                       <div class="info-text">Dis parturient mont, nascetur ridiculus mus nat</div>
